feat: debug queries